--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script.js"></script>
     <title>JhayFx Trading Academy</title>
   </head>
@@ -178,50 +179,50 @@
       </div>
         
     </section>
-    
+      <h2 class="section-title">Trading Plans Subscription</h2>
     <section class="four">
         <div class="container">
           <div class="flex">
             <div>
               <div class="plans">
                 <p>Basic</p>
-                <h3><span>Free</span></h3>
-                <p>Free plan for all users</p>
+                <h3><span>$20/month</span></h3>
+                <p>plan for Beginners</p>
               </div>
               <ul>
-                <li>Unlimited URL Shortening</li>
-                <li>Basic Link Analytics</li>
-                <li>Customizable Short Links</li>
-                <li>Standard Support</li>
-                <li>Ad-supported</li>
+                <li>2/3 Free Signals in a week</li>
+                <li>Candlestick Bible Pdf</li>
+                <li>General Community Group</li>
+                <li>Introductory classes</li>
+                <li>Chat Support 24/7</li>
               </ul>
             </div>
             <div class="professional">
               <div class="plans">
                 <p>Professional</p>
-                <h3><span>$15/month</span></h3>
-                <p>Ideal for business creators</p>
+                <h3><span>$50/month</span></h3>
+                <p>Ideal for Intermediate Traders</p>
               </div>
               <ul>
-                <li>Enhanced Link Analytics</li>
-                <li>Custom Branded Domains</li>
-                <li>Advanced Link Customization</li>
+                <li>Learning a strategy</li>
+                <li>Signal Group Access</li>
+                <li>Private classes</li>
                 <li>Priority Support</li>
-                <li>Ad-free Experience</li>
+                <li>Prop Firm Trading guidance and trading</li>
               </ul>
             </div>
             <div>
               <div class="plans">
-                <p>Teams</p>
-                <h3><span>$25/month</span></h3>
-                <p>Share with up to 10 users</p>
+                <p>Advanced</p>
+                <h3><span>$100/month</span></h3>
+                <p>Elite Traders</p>
               </div>
               <ul>
-                <li>Team Collaboration</li>
-                <li>User Roles and Permissions</li>
-                <li>Enhanced Security</li>
-                <li>API Access</li>
-                <li>Dedicated Account Manager</li>
+                <li>Group Funding for GBPUSD Bot Usage</li>
+                <li>Private Signal Group</li>
+                <li>Account Management available</li>
+                <li>Copy Trading Access</li>
+                <li>Prop Firm Account Trading</li>
               </ul>
             </div>
           </div>
@@ -250,6 +251,14 @@
           </a>
         </div>
       </div>
+
+        <a href="https://wa.me/+2347069688280" 
+       class="whatsapp-float" 
+       target="_blank"
+       aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+        <span class="tooltip">Chat with us on WhatsApp!</span>
+    </a>
     </section>
 
     <!-- Footer -->
