--- a/index.html
+++ b/index.html
@@ -186,27 +186,27 @@
             <div>
               <div class="plans">
                 <p>Basic</p>
-                <h3><span>$20/month</span></h3>
+                <h3><span>$50/month</span></h3>
                 <p>plan for Beginners</p>
               </div>
               <ul>
+                <li>Beginner To Advanced Course</li>
                 <li>2/3 Free Signals in a week</li>
-                <li>Candlestick Bible Pdf</li>
-                <li>General Community Group</li>
-                <li>Introductory classes</li>
+                <li>Trading Resources Access</li>
+                <li>General Community Access</li>
                 <li>Chat Support 24/7</li>
               </ul>
             </div>
             <div class="professional">
               <div class="plans">
                 <p>Professional</p>
-                <h3><span>$50/month</span></h3>
+                <h3><span>$100/month</span></h3>
                 <p>Ideal for Intermediate Traders</p>
               </div>
               <ul>
-                <li>Learning a strategy</li>
+                <li>Learning a Masterclass strategy</li>
                 <li>Signal Group Access</li>
-                <li>Private classes</li>
+                <li>Access to Previous Recorded Sessions</li>
                 <li>Priority Support</li>
                 <li>Prop Firm Trading guidance and trading</li>
               </ul>
@@ -214,14 +214,15 @@
             <div>
               <div class="plans">
                 <p>Advanced</p>
-                <h3><span>$100/month</span></h3>
+                <h3><span>$200/month</span></h3>
                 <p>Elite Traders</p>
               </div>
               <ul>
-                <li>Group Funding for GBPUSD Bot Usage</li>
-                <li>Private Signal Group</li>
+                <li>Bot Usage Access</li>
+                <li>Premium Signal Group Access</li>
                 <li>Account Management available</li>
                 <li>Copy Trading Access</li>
+                <li>Live Trading together</li>
                 <li>Prop Firm Account Trading</li>
               </ul>
             </div>
