"updated section about services"

--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
               </ul>
             </div>
           </div>
+
+          <div>
+             <h2 class="section-title">Recommended Brokers and Prop Firm </h2>
+              <h3 class="card-title">Recommended Broker</h3>
+            <p class="card-text">
+              Use this reliable broker <a href="https://one.exnessonelink.com/a/ejt6ohah7g" target="_blank">Exness</a> for a seamless trading experience.
+            </p>
+             <h3 class="card-title">Recommended PropFirm</h3>
+            <p class="card-text">
+              Use reliable Prop Firms like <a href="https://app.fundednext.com/accounts" target="_blank">FundedNext</a> for easy payouts and flexible challenges rules.Also, please copy the referral code "REFA9H63B"
+            </p>
+          </div>
          
       </section>
 
